# matreex

./: Cargo.toml  README.md
src/: arithmetic.rs  construct.rs  convert.rs  dense.rs  deserialize.rs  eq.rs  error.rs  fmt.rs  hash.rs  index.rs  iter.rs  lib.rs  macros.rs  matrix.rs  mock.rs  order.rs  parallel.rs  resize.rs  serde.rs  shape.rs  swap.rs  testkit.rs
src/arithmetic/: add.rs  div.rs  mul.rs  neg.rs  rem.rs  sub.rs
src/convert/: from_cols.rs  from_rows.rs
src/dense/: arithmetic.rs  construct.rs  convert.rs  eq.rs  fmt.rs  index.rs  iter.rs  layout.rs  mem.rs  order.rs  parallel.rs  resize.rs  serde.rs  swap.rs
src/dense/arithmetic/: add.rs  div.rs  mul.rs  neg.rs  rem.rs  sub.rs
src/dense/convert/: from_cols.rs  from_rows.rs  into_cols.rs  into_rows.rs
src/dense/iter/: iter_mut.rs
src/dense/layout/: serde.rs
src/iter/: inner.rs  iter_mut.rs  iter_nth_vector.rs
src/matrix/: arithmetic.rs  construct.rs  conversion.rs  convert.rs  default.rs  fmt.rs  index.rs  iter.rs  order.rs  parallel.rs  shape.rs  swap.rs
src/matrix/arithmetic/: add.rs  div.rs  mul.rs  neg.rs  rem.rs  sub.rs
