[package]
name = "matreex"
version = "0.38.4"
edition = "2024"
authors = ["Lingxuan Ye <love@lingxuan.io>"]
categories = ["data-structures", "no-std"]
repository = "https://github.com/Lingxuan-Ye/matreex"
readme = "README.md"
license = "MIT"
description = "A simple matrix implementation."

[dependencies.owo-colors]
version = "4.2.3"
optional = true

[dependencies.rayon]
version = "1.11.0"
optional = true

[dependencies.serde]
version = "1.0.228"
default-features = false
features = ["alloc", "derive"]
optional = true

[dev-dependencies]
serde_test = "1.0.177"

[features]
default = ["parallel", "pretty-debug", "serde"]
parallel = ["dep:rayon"]
pretty-debug = ["dep:owo-colors"]
serde = ["dep:serde"]
