[package]
name = "matreex"
version = "0.43.0"
edition = "2024"
authors = ["Lingxuan Ye <ink@lingxuan.io>"]
categories = ["data-structures", "no-std"]
repository = "https://github.com/Lingxuan-Ye/matreex"
readme = "README.md"
license = "MIT"
description = "A simple matrix implementation."

[dependencies.owo-colors]
version = "4.3.0"
optional = true

[dependencies.rayon]
version = "1.12.0"
optional = true

[dependencies.serde]
version = "1.0.228"
default-features = false
features = ["alloc", "derive"]
optional = true

[dev-dependencies]
serde_test = "1.0.177"

[features]
default = ["parallel", "pretty-debug", "serde"]
parallel = ["dep:rayon"]
pretty-debug = ["dep:owo-colors"]
serde = ["dep:serde"]
